<?xml version="1.0"?>
<package format="2">
    <name>apf_local_planner</name>
    <version>1.2.0</version>
    <description>
        The apf_local_planner package
    </description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <maintainer email="12010508@mail.sustech.edu.cn">Eason Hua</maintainer>
    <author email="jiangtao_1992@outlook.com">TaoJIANG</author>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>tf</depend>
    <depend>easondrone_msgs</depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
